[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-suite"
version = "0.1.0"
description = "Tic Tac Toe game with shared common utilities"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tic_tac_toe*", "common*"]